@@ -2,23 +2,21 @@
 Hash: SHA256
 
 DIST glfw-2.7.7.tar.bz2 927805 SHA256 422e755979524a1da28e4addcae723b7132998ca15e89be41bf34964d9360aa2 SHA512 1b51b9d88c8eed9da8084421949b561a4779410a6369ffdf482c2d8a166bab8c58bbb087ef6f32180d3fe9430988549be5c183b338dd0e1191b2c4b4a7b55379 WHIRLPOOL 646d38fd3ea88e8aa19dcbfa8f8b933adc530ea946cd51c3e03971ed6cdb294dadf5020a876ba298c378896179a4a7ba0129b858fc7f1273a574fe1c2c388a77
-DIST glfw-3.1.2.tar.bz2 588640 SHA256 31a1e6b6d7c64bbf44dce623785c87c0f29d965b19c452828e48acd64fa643e7 SHA512 00dc822403848f3e60535b9f70ea43147717252373c704c52b5480020cea7f416a00c036ab5ffbc0bc76863c4ddb7d271310e64face639e68f7a62e9db882e94 WHIRLPOOL 1e54efff306fc7f17620f6a874c66e5315d9dd2b2c45f6f4c95562b1c2ac50c5e4410173c23351c31aeaee187b5fe39999d1788fd9a42053d420b5a252331a2c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQJ8BAEBCABmBQJXGtp+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJYLbywXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59+4EQAMWKFQoM8c2s6fg+m9yUMNAZ
-I+UriQUTWuaicS9platGChUAxuTysrNk3PGpV/i07COiQcg3siNLKuZtEK8PBxcr
-AzAZOcl8scpWzXJbUK/w4+iGsSDTi+j+OnpbDzLBBYR+apjmYpix4BuUizNbcReg
-75MfMAXmJWYF4/EJju08ou7q1umxFr5YckmHTDD+wqvXwK0Hu3BEGqrB9pmnZBBM
-rgnPeJyuoYP+MG+WRwFs9QyhUGroOB5MrLxAfg6oNblZGwunp5xRW9oVGLwNTYKd
-kI3/LYDhNf5m4bT/1hNTm/Rbt1zvQ7wrgou3a8uCk3vT8yNFvAxjPS5iiNmsfJmM
-oCGgR0zcfA9hmP+6R7n4NCciq/UEmu8Z/Vh6tSWlcDYS3VvhdlC2D/G/0PGGetOX
-GydMndP0d2HcobbUEuIRDJnCq8MzKLkEZ1GkuNhsg8Da/+Q5E6lDV/7h2EnWlotv
-3eM/qEyXz8Z0D9QNcRVsbJQGdwVlLNZY1nRfhYg6daorEc52ql8TBYnPEUwpJ21e
-ufiUq62E84x5hLD8cpYQiUf/J8WG6kxREQ3C0d8YvNFHTMz1AvHlWtds02/XXsxi
-Tikv3WZX5cdqzuF9b2QCQ5bmQb7KLT565JYh0e9aS+NZs5c/+ubeUCMEmw0IVjy0
-Di6fwecxBrfX2XdElKB1
-=zKrL
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59XE8P/1xOUStHqsHnEYnOCJEy+T1v
+CKRJbsOeF/BzrBtYlDftu+4Ae7KBZl7cldAuJoqnYoBlKZWbugrAzoGTQE9KC4RS
+ICR931Ohw6WA7EV0Nj+7MUAw2Pcqc9I/+TYlbEWkfvYnmWVqMgfhsHRC7S0pphfl
+WmJiYnKBpXhlugVHe/6NoIrTygk+bnZKXo3tLd5gda3Ca5DIahmeb5ZznfBcipDt
+4rQhd5Fss4hvxqpgwBo/L5lrajW/75kwzS1MFeK+Sgz258nTDBJRNSYxgL6fI9rC
+0+VMp+CTUs8EMcxnXnZEsaJWR5vs9+Ky06TNj3HiAxkd+VH3bncOrRJAZeLLWLrA
+86V0SgGr54ihu2Fwgy/nkx1RJAEHU6di1rzg4YwpK3cPk6yjh7ZZolXoFrmpvwV1
+Q58PhHa3DoCn579h6gIieodNohVnipT/WeGXfgq+pEoxuWPrh4cfVDhn4lGLxcdt
+OVQc9sc93T3CHkX8K1fy96SXZowCH25DHuuF+1kNwQmVdy481uU0qVVRb1TgDnL9
+j6ciNLejLbAYXAyvJ0keye7H94nXVyzMxhkH2dXCCjViFLYh740P1pbAxLI74vpV
+sJjcYg/WY9Z1pockro8uvE+QrDHAd0gyaluwUH8mgL7bPHKX1qMArG3rumyTaMe1
+Kdj9Me1N89A+wmOu7TIM
+=Cfeq
 -----END PGP SIGNATURE-----
