@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
+	<maintainer type="person">
 		<email>hendrik@consetetur.de</email>
 		<name>Hendrik v. Raven (lorem_ipsum)</name>
 	</maintainer>
-	<use>
-		<flag name="egl">Use EGL instead of GLX for GL context creation</flag>
-	</use>
 	<upstream>
 		<remote-id type="sourceforge">glfw</remote-id>
 	</upstream>
