@@ -1,3 +1,7 @@
+  17 Nov 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  -glfw-3.1.2-r2.ebuild, metadata.xml:
+  media-libs/glfw: drop SLOT="3"
+
 *glfw-2.7.7-r2 (25 Apr 2016)
 *glfw-3.1.2-r2 (25 Apr 2016)
 
